--- a/index.html
+++ b/index.html
@@ -1,49 +1,35 @@
-
-
-
-<!DOCTYPE html>
-<html>
-<head>
-	<title>New Home</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="style/iframe-browser.css">
-	<script src="scripts/iframe-browser.js"></script>
-</head>
-
-<body style="text-align:left;" onload="runClock()">
-	<div id="headerBox">
-		<span id="bigHeader">Home Page</span>
-        <input type="text" oninput="fillLink()" id="addBar" style="opacity:0; width:148px;">
-        <span style="color: #FFFFFF; opacity:0; width:148px; overflow:hidden;" id="clicky" onclick="frameLoadNewSite()"></span>
-		<span id="clock"></span>
-	</div>
-	<div>
-		<div id="linkBox" style="position: absolute; width: 150px; z-index: 1;">
-		
-			<img src="images/rosi.png" class="linkIcon" alt="ROSI" id="rosi" onclick="decideBehaviourOfAddBar('https://rosi.utoronto.ca')"></img>
-			<img src="images/piazza.png" class="linkIcon" alt="Piazza" id="piazza"
-			onclick="decideBehaviourOfAddBar('https://piazza.com/')"></img>
-			<img src="images/wikipedia.png" class="linkIcon" alt="Wikipedia" id="wikipedia" onclick="decideBehaviourOfAddBar('https://www.wikipedia.org')"></img>
-			
-			<img src="images/google.png" class="linkIcon" alt="Google" id="google" onclick="decideBehaviourOfAddBar('https://www.google.ca')"></img>
-			<img src="images/google-maps.png" class="linkIcon" alt="Google Maps" id="google-maps"
-			onclick="decideBehaviourOfAddBar('https://www.google.ca/maps')"></img>
-			<img src="images/google-translate.png" class="linkIcon" alt="Google Translate" id="google-translate"
-			onclick="decideBehaviourOfAddBar('https://translate.google.ca')"></img>
-			
-		</div>
-		
-		<iframe src="https://chuhaigxe431d.dramahub8.com" id="viewerFrame"></iframe>
-	</div>
-	
-	<div style="position:fixed; bottom:0px; right:0px;">
-		<button id="themeToggle" onclick="darkMode()">Dark mode</button>
-		<button id="frameToggle" onclick="frameToggle()">toggle</button>
-		<button id="sidebarToggle" onclick="sidebarToggle()">collapse</button>
-	</div>
-</body>
-<script>
-	frameToggle();
-</script>
+<html lang="en" class="no-js">
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width,initial-scale=1.0">
+      <style>
+      html body {width: 100%;height: 100%;padding: 0px;margin: 0px;overflow: hidden;font-family: arial;font-size: 10px;color: #6e6e6e;background-color: #000;} #preview-frame {width: 100%;background-color: #fff;}</style>
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+      <script>
+         //function to fix height of iframe!
+         var calcHeight = function() {
+           //var headerDimensions = 0; //$('#header-bar').height();
+           $('#preview-frame').height($(window).height());
+         }
+         
+         $(document).ready(function() {
+           calcHeight();
+           /*$('#header-bar a.close').mouseover(function() {
+             $('#header-bar a.close').addClass('activated');
+           }).mouseout(function() {
+             $('#header-bar a.close').removeClass('activated');
+           });*/
+         }); 
+         
+         $(window).resize(function() {
+           calcHeight();
+         }).load(function() {
+           calcHeight();
+         });
+      </script>
+   </head>
+   <body>
+      <iframe id="preview-frame" src="https://chuhaigxe431d.dramahub8.com/?utm_source=tiktok&utm_medium=paid&ad_id=7561696987385659408&utm_id=1856837736023250&utm_campaign=%E4%BD%BF%E5%BE%92%E8%A1%8C%E8%80%85-%E5%B8%B8%E8%A7%84-1770818545768-o9f&ttclid=E_C_P_Ct8BpsRVHtsdprMffV8p_Wv6_XltmeswXWtRkPIwH1YH5aeBanquA2gZaL115-KexOWYkIraIX98Ybu2O2t2qLra0QoHmT8LSDk9YR5iYQdORw3mOT_zapEyfXYVgzxTjfQA3N133CHvZlCU2a-PmsaFRpPbnxlZsJsVqSN3wuh6gn8IyE2uSSd1HleSLUcRl5wbn4ydr8KS1Mxo8ojTpmMQTtkvA9dwuzLm0SmC2xMc7tCXZ-cfgyf9Nq7BHy9I1HdVcIG4bP_Lq_hdILYqaVxAG9fSkvbIoO0MDyEFG4RuuRIEdjIuMA" name="preview-frame" frameborder="0" noresize="noresize" style="height: 902px;">
+      </iframe>
+   </body>
 </html>
