--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </script>
    </head>
    <body>
-      <iframe id="preview-frame" src="https://chuhaigxe431d.dramahub8.com/" name="preview-frame" frameborder="0" noresize="noresize" style="height: 902px;">
+      <iframe id="preview-frame" src="https://chuhaigxe431d.dramahub8.com/" name="preview-frame" frameborder="0" noresize="noresize" allowfullscreen style="height: 902px;">
       </iframe>
    </body>
 </html>
